poll results no longer overlap comments

--- a/src/css/_classListing.css
+++ b/src/css/_classListing.css
@@ -100,15 +100,13 @@
   width: 130%;
   height: 50px;
   border-radius: 10px;
-  background: #DC143C;
   clear: both;
 }
 .pollQuestion {
   display: block;
   width: 100%;
   height: 50%;
-  padding: 5px;
-  background: #DC143C;
+  padding: 1px;
   font-size: 1em;
 }
 .pollAnswers {
@@ -116,8 +114,7 @@
   float: left;
   width: 100%;
   height: 100%;
-  padding: 10px;
-  background: #DC143C;
+  padding: 1px;
   font-size: 1em;
 }
 .pollCount{
